--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "title":"Milook123",
+    "title":"Milook123的博客",
     "subTitle":"我是一个热爱mc的玩家，期待和你的相遇",
     "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
     "GMEEK_VERSION":"last"
