--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "title":"Milook123的博客",
-    "subTitle":"我是一个热爱mc的玩家，期待和你的相遇",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "title":"Milook123",
+    "subTitle":"一个热爱mc的玩家，期待和你的相遇",
+    "avatarUrl":"https://i0.hdslb.com/bfs/article/26d128e818b943d85a0eea51e0b78412e1c39a4c.png@1256w_1256h_!web-article-pic.avif",
     "GMEEK_VERSION":"last"
 }
